--- a/综合.md
+++ b/综合.md
@@ -6,7 +6,7 @@
 
 ​		每个构造函数都有一个原型对象(`prototype`属性)，原型对象都包含一个指向构造函数的指针(`constructor`属性),而构造函数创建的实例都包含一个指向原型对象的内部指针(`_proto_`)。对象会通过`_proto_`查找对象不存在的属性，直至`Object.prototype`，`Object.prototype`的`_proto_`的值为null。
 
-![image-20210516200517084](/imgs/image-20210516200517084.png)
+![image-20210516200517084](https://github.com/ll1035709119/Front-end-knowledge/blob/master/imgs/image-20210516200517084.png)
 
 ##### 2、继承的实现
 
