--- a/综合.md
+++ b/综合.md
@@ -179,6 +179,58 @@ child.getName() // fedaily
 
 ​	4、通过call和apply指定this。
 
-##### 8、bind
+##### 8、apply,call,bind
 
-​	
+​	apply和call类似，区别在于apply传参是放在一个数组里面，bind是**将方法返回**，也就是将方法给与给调用bind的对象.
+
+​	js实现call:
+
+```javascript
+Function.prototype.my_Call=function(){
+    if(typeof this !== 'function'){
+      throw new TypeError('err')
+    };
+    let context=arguments[0] || window;
+    context.fn=this;
+    let args=[...arguments].slice(1);
+    let result =context.fn(...args);
+    delete context.fn
+    return result
+  };
+```
+
+js实现apply:
+
+```javascript
+Function.prototype.my_Apply=function(){
+    if(typeof this !== 'function'){
+      throw new TypeError('err')
+    };
+    let context=arguments[0]||window;
+    context.fn=this;
+    result=arguments[1] ? 			      		
+    	 context.fn(...arguments[1])
+    	:context.fn();
+    delete context.fn;
+    return result
+  }
+```
+
+js实现bind:
+
+```javascript
+Function.prototype.my_Bind=function(){
+    if(typeof this !=='function'){
+      throw new TypeError('error!')
+    };
+    let context=arguments[0]
+    let that=this;
+    let args=[...arguments].slice(1);
+    return function(){
+      let allArgs=args.concat([...arguments])
+      let result=that.apply(context,allArgs)
+      return result 
+    }
+  }
+```
+
