--- a/综合.md
+++ b/综合.md
@@ -234,3 +234,19 @@ Function.prototype.my_Bind=function(){
   }
 ```
 
+##### 9、eventloop
+
+​	首先JavaScript是**单线程**，异步，**非阻塞**、解析类脚本语言。
+
+​	单线程是防止多线程同时操作DOM出现执行相驳操作，js处理任务是从上到下依次处理的，当遇到计时器，DOM事件监听或者网络请求的任务时，会将任务交给浏览器提供的相应线程（**WebApi**）去处理，主线程继续执行后续任务。这便是异步和非阻塞。
+
+​	其中异步分为宏任务和微任务两个概念：
+
+​		**宏任务**：整体代码script，setTimeout，setInterval
+
+​		**微任务**：Promise(then,catch,finally)，process.nextTick
+
+​	eventloop是一种**循环机制**。不断去轮询一些队列 ，从中找到需要执行的任务并按顺序执行的一个执行模型。**每一次循环都是首先从宏任务开始，微任务结束的。**
+
+​	首先整个script代码作为一个宏任务执行，主线程自上而下执行所有代码，遇到同步任务立即执行，每调用一个函数生成它的栈帧，并压入调用栈执行，执行后从栈中弹出。遇到非微任务的异步任务交给对应线程处理，执行完后将回调函数交给消息队列作为下一次循环的宏任务。遇到微任务交给微任务队列，当前宏任务结束，清空微任务队列中所有队列。从消息队列中选择第一个宏任务执行。
+
