--- a/综合.md
+++ b/综合.md
@@ -1,14 +1,14 @@
 
 
-#### 一.JS基础
+# 一.JS基础
 
-##### 1、原型链
+## 1、原型链
 
 ​		每个构造函数都有一个原型对象(`prototype`属性)，原型对象都包含一个指向构造函数的指针(`constructor`属性),而构造函数创建的实例都包含一个指向原型对象的内部指针(`_proto_`)。对象会通过`_proto_`查找对象不存在的属性，直至`Object.prototype`，`Object.prototype`的`_proto_`的值为null。
 
 ![image-20210516200517084](https://github.com/ll1035709119/Front-end-knowledge/blob/master/imgs/image-20210516200517084.png)
 
-##### 2、继承的实现
+## 2、继承的实现
 
 1、原型链继承，将父类的实例作为子类的原型，他的特点是实例是子类的实例也是父类的实例，父类新增的原型方法/属性，子类都能够访问，并且原型链继承简单易于实现，缺点是来自原型对象的所有属性被所有实例共享，无法实现多继承，无法向父类构造函数传参。
 
@@ -131,7 +131,7 @@ const child = new Child()
 child.getName() // fedaily
 ```
 
-##### 3、数据类型
+## 3、数据类型
 
 基本数据类型：
 
@@ -141,7 +141,7 @@ child.getName() // fedaily
 
 ​	array,object,function等
 
-##### 4、let,const和var
+## 4、let,const和var
 
 ​	var支持变量提升，而let和const声明的变量存在暂时性死区，需提前声明才能调用。
 
@@ -149,7 +149,7 @@ child.getName() // fedaily
 
 ​	const和let缩小了变量作用域，避免了变量污染。
 
-##### 5、es6新规范
+## 5、es6新规范
 
 ​	1、let和const
 
@@ -159,7 +159,7 @@ child.getName() // fedaily
 
 ​	4、数组和对象的解构，剩余参数
 
-##### 6、new的过程
+## 6、new的过程
 
 ​	1、创建一个新的空对象
 
@@ -169,7 +169,7 @@ child.getName() // fedaily
 
 ​	4、判断返回值类型，将初始化完毕的新对象地址，保存到等号左边的变量中
 
-##### 7、this指向
+## 7、this指向
 
 ​	1、作为函数调用，this指向全局对象（window）。
 
@@ -179,7 +179,7 @@ child.getName() // fedaily
 
 ​	4、通过call和apply指定this。
 
-##### 8、apply,call,bind
+## 8、apply,call,bind
 
 ​	apply和call类似，区别在于apply传参是放在一个数组里面，bind是**将方法返回**，也就是将方法给与给调用bind的对象.
 
@@ -234,7 +234,7 @@ Function.prototype.my_Bind=function(){
   }
 ```
 
-##### 9、eventloop
+## 9、eventloop
 
 ​	首先JavaScript是**单线程**，异步，**非阻塞**、解析类脚本语言。
 
@@ -248,5 +248,5 @@ Function.prototype.my_Bind=function(){
 
 ​	eventloop是一种**循环机制**。不断去轮询一些队列 ，从中找到需要执行的任务并按顺序执行的一个执行模型。**每一次循环都是首先从宏任务开始，微任务结束的。**
 
-​	首先整个script代码作为一个宏任务执行，主线程自上而下执行所有代码，遇到同步任务立即执行，每调用一个函数生成它的栈帧，并压入调用栈执行，执行后从栈中弹出。遇到非微任务的异步任务交给对应线程处理，执行完后将回调函数交给消息队列作为下一次循环的宏任务。遇到微任务交给微任务队列，当前宏任务结束，依次执行微任务队列中所有任务并重新渲染，清空完微任务队列后从消息队列中选择第一个宏任务执行。
+​	首先整个script代码作为一个宏任务执行，主线程自上而下执行所有代码，遇到同步任务立即执行，每调用一个函数生成它的栈帧，并压入调用栈执行，执行后从栈中弹出。遇到非微任务的异步任务交给对应线程处理，执行完后将回调函数交给消息队列作为下一次循环的宏任务。遇到微任务交给微任务队列，当前宏任务结束，依次执行微任务队列中所有任务并渲染，清空完微任务队列后从消息队列中选择第一个宏任务执行。
 
