--- a/综合.md
+++ b/综合.md
@@ -248,5 +248,9 @@ Function.prototype.my_Bind=function(){
 
 ​	eventloop是一种**循环机制**。不断去轮询一些队列 ，从中找到需要执行的任务并按顺序执行的一个执行模型。**每一次循环都是首先从宏任务开始，微任务结束的。**
 
-​	首先整个script代码作为一个宏任务执行，主线程自上而下执行所有代码，遇到同步任务立即执行，每调用一个函数生成它的栈帧，并压入调用栈执行，执行后从栈中弹出。遇到非微任务的异步任务交给对应线程处理，执行完后将回调函数交给消息队列作为下一次循环的宏任务。遇到微任务交给微任务队列，当前宏任务结束，依次执行微任务队列中所有任务并渲染，清空完微任务队列后从消息队列中选择第一个宏任务执行。
+​	首先整个script代码作为一个宏任务执行，主线程自上而下执行所有代码，遇到同步任务立即执行，每调用一个函数生成它的栈帧，并压入调用栈执行，执行后从栈中弹出。遇到非微任务的异步任务交给对应线程处理，执行完后将回调函数交给消息队列作为下一次循环的宏任务。遇到微任务交给微任务队列，当前宏任务结束，依次执行微任务队列中所有任务并渲染，清uan空完微任务队列后从消息队列中选择第一个宏任务执行。
+
+## 10、Promise
+
+​	promise的三种状态：pending，resolved，rejected，promise的状态是私有的，通过`resolve`()和`reject()`两个函数参数或者`Promise.resolve()和Promise.rejecte()`切换状态或直接实例化一个对应状态的Promise。状态切换不可逆。
 
