strengthen key points

--- a/综合.md
+++ b/综合.md
@@ -143,9 +143,9 @@ child.getName() // fedaily
 
 ## 4、let,const和var
 
-​	var支持变量提升，而let和const声明的变量存在暂时性死区，需提前声明才能调用。
+​	**var支持变量提升**，而let和const声明的变量存在**暂时性死区**，需提前声明才能调用。
 
-​	const和let是块级作用域，而var是函数级作用域，const声明需设置初始值，const声明引用类型常量，可修改常量的属性。var可重复定义同名变量。
+​	const和let是**块级作用域**，而var是函数级作用域，const声明需设置初始值，const声明引用类型常量，可修改常量的属性。**var可重复定义同名变量**。
 
 ​	const和let缩小了变量作用域，避免了变量污染。
 
@@ -236,7 +236,7 @@ Function.prototype.my_Bind=function(){
 
 ## 9、eventloop
 
-​	首先JavaScript是**单线程**，异步，**非阻塞**、解析类脚本语言。
+​	首先JavaScript是**单线程**，**异步**，**非阻塞**、解析类脚本语言。
 
 ​	单线程是防止多线程同时操作DOM出现执行相驳操作，js处理任务是从上到下依次处理的，当遇到计时器，DOM事件监听或者网络请求的任务时，会将任务交给浏览器提供的相应线程（**WebApi**）去处理，主线程继续执行后续任务。这便是异步和非阻塞。
 
@@ -248,9 +248,9 @@ Function.prototype.my_Bind=function(){
 
 ​	eventloop是一种**循环机制**。不断去轮询一些队列 ，从中找到需要执行的任务并按顺序执行的一个执行模型。**每一次循环都是首先从宏任务开始，微任务结束的。**
 
-​	首先整个script代码作为一个宏任务执行，主线程自上而下执行所有代码，遇到同步任务立即执行，每调用一个函数生成它的栈帧，并压入调用栈执行，执行后从栈中弹出。遇到非微任务的异步任务交给对应线程处理，执行完后将回调函数交给消息队列作为下一次循环的宏任务。遇到微任务交给微任务队列，当前宏任务结束，依次执行微任务队列中所有任务并渲染，清uan空完微任务队列后从消息队列中选择第一个宏任务执行。
+​	首先**整个script代码作为一个宏任务执行**，主线程自上而下执行所有代码，遇到**同步任务立即执行**，遇到**非微任务的异步任务**交给对应线程处理，**执行完后将回调函数交给消息队列作为下一次循环的宏任务**。遇到**微任务交给微任务队列**。每调用一个函数生成它的**栈帧(包含该函数的上下文)**，并压入调用栈执行，执行后从栈中弹出。**当前宏任务结束**，调用栈为空时，**依次执行当前宏任务执行期间加入微任务队列中的所有任务并渲染**，**清空完微任务队列后从消息队列中选择第一个宏任务执行**。
 
 ## 10、Promise
 
-​	promise的三种状态：pending，resolved，rejected，promise的状态是私有的，通过`resolve`()和`reject()`两个函数参数或者`Promise.resolve()和Promise.rejecte()`切换状态或直接实例化一个对应状态的Promise。状态切换不可逆。
+​	promise的三种状态：**pending**，**resolved**，**rejected**，promise的状态是**私有**的，通过`resolve`()和`reject()`两个函数参数或者`Promise.resolve()和Promise.rejecte()`切换状态或直接实例化一个对应状态的Promise。**状态切换不可逆**。
 
