--- a/综合.md
+++ b/综合.md
@@ -179,6 +179,10 @@ child.getName() // fedaily
 
 ​	4、通过call和apply指定this。
 
+​	**This的优先级**
+
+​		new绑定 > 硬绑定 > 隐式绑定 > 默认绑定
+
 ## 8、apply,call,bind
 
 ​	apply和call类似，区别在于apply传参是放在一个数组里面，bind是**将方法返回**，也就是将方法给与给调用bind的对象.
@@ -187,14 +191,11 @@ child.getName() // fedaily
 
 ```javascript
 Function.prototype.my_Call=function(){
-    if(typeof this !== 'function'){
-      throw new TypeError('err')
-    };
-    let context=arguments[0] || window;
-    context.fn=this;
-    let args=[...arguments].slice(1);
-    let result =context.fn(...args);
-    delete context.fn
+    context=arguments[0];
+    const args = [...arguments].slice(1);
+    context.fn = this;
+    const result = context.fn(...args);
+    delete context.fn;
     return result
   };
 ```
@@ -203,15 +204,10 @@ js实现apply:
 
 ```javascript
 Function.prototype.my_Apply=function(){
-    if(typeof this !== 'function'){
-      throw new TypeError('err')
-    };
-    let context=arguments[0]||window;
-    context.fn=this;
-    result=arguments[1] ? 			      		
-    	 context.fn(...arguments[1])
-    	:context.fn();
-    delete context.fn;
+    context=arguments[0]
+    context.fn = this
+    const result = context.fn(...arguments[1])
+    delete context.fn
     return result
   }
 ```
@@ -220,21 +216,85 @@ js实现bind:
 
 ```javascript
 Function.prototype.my_Bind=function(){
-    if(typeof this !=='function'){
-      throw new TypeError('error!')
-    };
-    let context=arguments[0]
-    let that=this;
     let args=[...arguments].slice(1);
+    let that=this;
+    let context=arguments[0]
     return function(){
-      let allArgs=args.concat([...arguments])
-      let result=that.apply(context,allArgs)
-      return result 
+      let allARgs=[...args,...arguments]
+      return that.apply(context,allARgs)
     }
   }
 ```
 
-## 9、eventloop
+## 9、Promise
+
+​	promise的三种状态：**pending**，**resolved**，**rejected**，promise的状态是**私有**的，通过`resolve`()和`reject()`两个函数参数或者`Promise.resolve()和Promise.rejecte()`切换状态或直接实例化一个对应状态的Promise。**状态切换不可逆**。
+
+### then 方法
+
+当 Promise 实例创建成功后，可以执行其原型上的 then 方法。then 方法接受两个参数，分别是当前 Promise 的成功回调和失败回调，并且这两个函数会自动返回一个新的 Promise 对象。
+
+then 方法的成功回调如果返回的是一个 Promise 对象，那么只有当这个 Promise 对象状态发生改变之后，才会执行下一个 then。
+
+### catch 方法
+
+Promise 原型上还有一个 catch 方法，它会捕获在它链式之前的所有未被捕获的错误（一旦前面的错误被捕获，就不会执行）。
+
+catch 只是捕获异常，catch 并不能终止当前 Promise 的链式调用。
+
+同样的，catch 方法也会自动返回一个新的 Promise 对象，一旦显示返回一个 Promise，那么只有当这个 Promise 对象状态发生改变时，链式调用才会继续往下走。
+
+### finally 方法
+
+在 ES8 中新加入的方法，此方法和 then、catch 不同，它不会跟踪 Promise 的状态，即不管 Promise 最终变成了什么状态，都会执行这个方法，同时 finally 不接收任何参数。
+
+同样的，finally 并不是链式调用的终点，它也会自动返回一个新的 Promise 对象。
+
+### all 方法
+
+这个方法同字面意思一样，参数接收一个 Promise 数组，返回一个新的 Promise。只有当数组中的每一个元素都成功之后，Promise 的状态才会变更为 fulfilled，否则只要有一个失败，状态都会变更为 rejected。
+
+成功之后的结果同样是返回一个数组，里面的每个元素按顺序对应着传入的 Promise 数组。
+
+### race 方法
+
+字面意思是竞速，参数同样是接收一个 Promise 数组，返回一个新的 Promise。数组中无论哪个元素先发生状态改变，结果就返回先完成的那个 Promise 的值。
+
+### allSettled 方法
+
+该方法是 ES2020 新加入的方法，参数和返回值同 `Promise.all` 一样，区别在于该方法返回值不论元素是否成功，只要执行结束，则返回最终执行的结果。
+
+### **async/await**
+
+`async` 函数会返回一个 **Promise** 对象，`await`只能出现在`async`函数中。使用 `await`, 解释器都创建一个 **promise** 对象，然后把剩下的 async 函数中的操作放到 then 回调函数中。
+
+```javascript
+  async function test(){
+    let p=new Promise((res)=>{
+      res(1)
+    })
+    await p.then((res)=>{
+      console.log(res)
+    })
+    console.log(2)
+  }
+  test()//1 2
+
+```
+
+#### Async 基本用法
+
+async 函数返回一个 Promise 对象，可以使用 then 方法添加回调函数。当函数执行的时候，一旦遇到 await 就会先返回，等到一步操作完成，再接着执行函数体内后面的语句，并且 await 必须在 async 函数内，不然会报错。
+
+async 函数中的返回值会成为返回的 Promise 对象中 resolve 的值；当 async 函数中抛出一个错误的时候，会成为返回 Promise 对象中 reject 的值。
+
+#### Await 表达式
+
+await 语句后面跟随的是一个 thenable 对象（即包含 then 的对象，类 Promise 对象），此时 await 会把他们当成是一个标准的 Promise 来处理，并且返回该 Promise resolved 的值。如果是基本数据类型的话，则会直接返回这个值。
+
+当 await 后面的 Promise 抛出一个错误时，此时会直接跳出 async 函数并被 async 函数的 catch 捕获。如果想要不中断 async 函数继续执行的话，可以尝试在内部对 await 用 try catch 包裹起来。
+
+## 10、eventloop
 
 ​	首先JavaScript是**单线程**，**异步**，**非阻塞**、解析类脚本语言。
 
@@ -242,15 +302,81 @@ Function.prototype.my_Bind=function(){
 
 ​	其中异步分为宏任务和微任务两个概念：
 
-​		**宏任务**：整体代码script，setTimeout，setInterval
+**宏任务**：
 
-​		**微任务**：Promise(then,catch,finally)，process.nextTick
+- 整体代码script
+- setTimeout
+- setInterval
 
-​	eventloop是一种**循环机制**。不断去轮询一些队列 ，从中找到需要执行的任务并按顺序执行的一个执行模型。**每一次循环都是首先从宏任务开始，微任务结束的。**
+**微任务**：
+
+- Promise(then,catch,finally)，
+- process.nextTick(在node中先于Promise)
+- async / await （等价于 Promise.then）
+
+​	eventloop是一种**循环机制**。不断去轮询一些队列 ，从中找到需要执行的任务并按顺序执行的一个执行模型。
+
+**总体结论**就是：
+
+- 执行宏任务
+- 然后执行宏任务产生的微任务
+- 若微任务在执行过程中产生了新的微任务，则继续执行微任务
+- 微任务执行完毕，再回到宏任务中进行下一轮循环
+
+**每一次循环都是首先从宏任务开始，微任务结束的。**
 
 ​	首先**整个script代码作为一个宏任务执行**，主线程自上而下执行所有代码，遇到**同步任务立即执行**，遇到**非微任务的异步任务**交给对应线程处理，**执行完后将回调函数交给消息队列作为下一次循环的宏任务**。遇到**微任务交给微任务队列**。每调用一个函数生成它的**栈帧(包含该函数的上下文)**，并压入调用栈执行，执行后从栈中弹出。**当前宏任务结束**，调用栈为空时，**依次执行当前宏任务执行期间加入微任务队列中的所有任务并渲染**，**清空完微任务队列后从消息队列中选择第一个宏任务执行**。
 
-## 10、Promise
+------
 
-​	promise的三种状态：**pending**，**resolved**，**rejected**，promise的状态是**私有**的，通过`resolve`()和`reject()`两个函数参数或者`Promise.resolve()和Promise.rejecte()`切换状态或直接实例化一个对应状态的Promise。**状态切换不可逆**。
+### Node的事件循环机制
 
+- **timers**：这个阶段执行定时器队列中的回调，如 `setTimeout()` 和 `setInterval()`。
+- **I/O callbacks**: 这个阶段执行几乎所有的回调。但是不包括close事件，定时器和`setImmediate()`的回调。
+- **idle, prepare**: 这个阶段仅在内部使用，可以不必理会。
+- **poll**: 等待新的I/O事件，node在一些特殊情况下会阻塞在这里。
+- **check**: `setImmediate()`的回调会在这个阶段执行。
+- **close callbacks**: 例如`socket.on('close', ...)`这种close事件的回调。
+
+执行顺序是：
+
+1. 输入数据阶段（incoming data）
+2. 轮询阶段（poll）
+3. 检查阶段（check）
+4. 关闭事件回调阶段（close callbacks）
+5. 定时器检测阶段（timer）
+6. I / O 事件回调阶段（I / O callbacks）
+7. 闲置阶段（idle，prepare）
+8. 轮询阶段
+
+每个阶段都有三个队列：
+
+1. 这个阶段同步任务队列
+2. 这个阶段 `process.nextTick` 队列
+3. 这个阶段 Promise 队列
+
+Node.js 会采用先进先出的方式处理该阶段的任务，当所有同步任务都处理完毕后，会先清空 `process.nextTick` 队列，然后是 Promise 队列。如果在某一阶段一直递归调用 `process.nextTick`，会导致主线程一直停留在该阶段，表现类似于`while(true)`
+
+# 二、垃圾回收机制原理
+
+对堆内存中已经没有被引用或者长时间没有引用的对象进行清除和修改。
+
+内存管理的主要概念是可达性，“可达性” 值就是那些以某种方式可访问或可用的值，它们被保证存储在内存中。
+
+ 如果引用或引用链可以从根（本地函数的局部变量和参数，全局变量）访问任何其他值，则认为该值是可访问的
+
+基本的垃圾回收算法称为**“标记-清除”**
+
+- 垃圾回收器获取根并**“标记”**(记住)它们。
+- 然后它访问并“标记”所有来自它们的引用。
+- 然后它访问标记的对象并标记它们的引用。所有被访问的对象都被记住，以便以后不再访问同一个对象两次。
+- 以此类推，直到有未访问的引用(可以从根访问)为止。
+- 除标记的对象外，所有对象都被删除。
+
+一些优化:
+
+- **分代回收**——对象分为两组:“新对象”和“旧对象”。许多对象出现，完成它们的工作并迅速结 ，它们很快就会被清理干净。那些活得足够久的对象，会变“老”，并且很少接受检查。
+- **增量回收**——如果有很多对象，并且我们试图一次遍历并标记整个对象集，那么可能会花费一些时间，并在执行中会有一定的延迟。因此，引擎试图将垃圾回收分解为多个部分。然后，各个部分分别执行。这需要额外的标记来跟踪变化，这样有很多微小的延迟，而不是很大的延迟。
+- **空闲时间收集**——垃圾回收器只在 CPU 空闲时运行，以减少对执行的可能影响。
+
+对于持续运行的服务进程（daemon），必须及时释放不再用到的内存。否则内存占用越来越高，轻则影响系统性能，重则导致进程崩溃。对于不再用到的内存，没有及时释放，就叫做内存泄漏（memory leak）。
