bind apply call

--- a/综合.md
+++ b/综合.md
@@ -190,12 +190,18 @@ child.getName() // fedaily
 ​	js实现call:
 
 ```javascript
-Function.prototype.my_Call=function(){
+Function.prototype.my_Call=function
+	//第一个参数为需要绑定的对象
     context=arguments[0];
+	//剩余参数数组化参数，取除第一个的其他参数
     const args = [...arguments].slice(1);
+	//给对象添加一个执行函数为构造函数
     context.fn = this;
+	//执行对象的执行函数
     const result = context.fn(...args);
+	//删除对象的的执行函数
     delete context.fn;
+	//返回结果
     return result
   };
 ```
@@ -206,6 +212,7 @@ js实现apply:
 Function.prototype.my_Apply=function(){
     context=arguments[0]
     context.fn = this
+    //apply，第二个参数为数组，通过剩余参数结构数组
     const result = context.fn(...arguments[1])
     delete context.fn
     return result
@@ -219,8 +226,11 @@ Function.prototype.my_Bind=function(){
     let args=[...arguments].slice(1);
     let that=this;
     let context=arguments[0]
+    //bind返回的是方法
     return function(){
+      //拼接bind方法的arguments
       let allARgs=[...args,...arguments]
+      //使用apply方法
       return that.apply(context,allARgs)
     }
   }
